==> hathach/tinyusb/src/portable/microchip/same70/dcd_same70.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "sam.h"
#  define USE_SOF     0
#  define USBHS_RAM_ADDR        0xA0100000u
#define get_ep_fifo_ptr(ep, scale) (((TU_XSTRCAT(TU_STRCAT(uint, scale),_t) (*)[0x8000 / ((scale) / 8)])USBHS_RAM_ADDR)[(ep)])
#define EP_MAX            10

void dcd_init (uint8_t rhport)
{
  // Enable USBPLL
  PMC->CKGR_UCKR = CKGR_UCKR_UPLLEN | CKGR_UCKR_UPLLCOUNT(0x3fU);
  // Wait until USB UTMI stabilize
  while (!(PMC->PMC_SR & PMC_SR_LOCKU));
  // Enable USB FS clk
  PMC->PMC_USB = PMC_USB_USBS | PMC_USB_USBDIV(10 - 1);
  PMC->PMC_SCER = PMC_SCER_USBCLK;
  dcd_connect(rhport);
}

void dcd_remote_wakeup (uint8_t rhport)
{
  (void) rhport;
  USBHS->USBHS_DEVCTRL |= USBHS_DEVCTRL_RMWKUP;
}

void dcd_int_handler(uint8_t rhport)
{
  (void) rhport;
  uint32_t int_status = USBHS->USBHS_DEVISR;
  // End of reset interrupt 
  if (int_status & USBHS_DEVISR_EORST) {
    // Unfreeze USB clock 
    USBHS->USBHS_CTRL &= ~USBHS_CTRL_FRZCLK;
    while(USBHS_SR_CLKUSABLE != (USBHS->USBHS_SR & USBHS_SR_CLKUSABLE));
    // Reset all endpoints
    for (int ep_ix = 1; ep_ix < EP_MAX; ep_ix++) {
      USBHS->USBHS_DEVEPT |= 1 << (USBHS_DEVEPT_EPRST0_Pos + ep_ix);
      USBHS->USBHS_DEVEPT &=~(1 << (USBHS_DEVEPT_EPRST0_Pos + ep_ix));
    }
    dcd_edpt_open (0, &ep0_desc);
    // Acknowledge the End of Reset interrupt 
    USBHS->USBHS_DEVICR = USBHS_DEVICR_EORSTC;
    // Acknowledge the Wakeup interrupt 
    USBHS->USBHS_DEVICR = USBHS_DEVICR_WAKEUPC;
    // Acknowledge the suspend interrupt 
    USBHS->USBHS_DEVICR = USBHS_DEVICR_SUSPC;
    // Enable Suspend Interrupt 
    USBHS->USBHS_DEVIER = USBHS_DEVIER_SUSPES;
    
    dcd_event_bus_reset(rhport, get_speed(), true);
  }
  // End of Wakeup interrupt 
  if (int_status & USBHS_DEVISR_WAKEUP) {
    // Unfreeze USB clock 
    USBHS->USBHS_CTRL &= ~USBHS_CTRL_FRZCLK;
    // Wait to unfreeze clock 
    while (USBHS_SR_CLKUSABLE != (USBHS->USBHS_SR & USBHS_SR_CLKUSABLE));
    // Acknowledge the Wakeup interrupt 
    USBHS->USBHS_DEVICR = USBHS_DEVICR_WAKEUPC;
    // Disable Wakeup Interrupt 
    USBHS->USBHS_DEVIDR = USBHS_DEVIDR_WAKEUPEC;
    // Enable Suspend Interrupt 
    USBHS->USBHS_DEVIER = USBHS_DEVIER_SUSPES;
    
    dcd_event_bus_signal(0, DCD_EVENT_RESUME, true);
  }
  // Suspend interrupt 
  if (int_status & USBHS_DEVISR_SUSP) {
    // Unfreeze USB clock 
    USBHS->USBHS_CTRL &= ~USBHS_CTRL_FRZCLK;
    // Wait to unfreeze clock 
    while (USBHS_SR_CLKUSABLE != (USBHS->USBHS_SR & USBHS_SR_CLKUSABLE));
    // Acknowledge the suspend interrupt 
    USBHS->USBHS_DEVICR = USBHS_DEVICR_SUSPC;
    // Disable Suspend Interrupt 
    USBHS->USBHS_DEVIDR = USBHS_DEVIDR_SUSPEC;
    // Enable Wakeup Interrupt 
    USBHS->USBHS_DEVIER = USBHS_DEVIER_WAKEUPES;
    // Freeze USB clock 
    USBHS->USBHS_CTRL |= USBHS_CTRL_FRZCLK;
    
    dcd_event_bus_signal(0, DCD_EVENT_SUSPEND, true);
  }
#if USE_SOF
  if(int_status & USBHS_DEVISR_SOF) {
    USBHS->USBHS_DEVICR = USBHS_DEVICR_SOFC;
    
    dcd_event_bus_signal(0, DCD_EVENT_SOF, true);
  }
#endif 
  // Endpoints interrupt 
  for (int ep_ix = 0; ep_ix < EP_MAX; ep_ix++) {
    if (int_status & (1 << (USBHS_DEVISR_PEP_0_Pos + ep_ix))) {
      dcd_ep_handler(ep_ix);
    }
  }
}

void dcd_edpt0_status_complete(uint8_t rhport, tusb_control_request_t const * request)
{
  (void) rhport;

  if (request->bmRequestType_bit.recipient == TUSB_REQ_RCPT_DEVICE &&
      request->bmRequestType_bit.type == TUSB_REQ_TYPE_STANDARD &&
      request->bRequest == TUSB_REQ_SET_ADDRESS )
  {
    uint8_t const dev_addr = (uint8_t) request->wValue;
    
    USBHS->USBHS_DEVCTRL |= dev_addr | USBHS_DEVCTRL_ADDEN;
  }
}

bool dcd_edpt_open (uint8_t rhport, tusb_desc_endpoint_t const * ep_desc)
{
  (void) rhport;
  uint8_t const epnum = tu_edpt_number(ep_desc->bEndpointAddress);
  uint8_t const dir   = tu_edpt_dir(ep_desc->bEndpointAddress);
  uint16_t const epMaxPktSize = ep_desc->wMaxPacketSize.size;
  tusb_xfer_type_t const eptype = (tusb_xfer_type_t)ep_desc->bmAttributes.xfer;
  uint8_t fifoSize = 0;                       // FIFO size 
  uint16_t defaultEndpointSize = 8;           // Default size of Endpoint 
  // Find upper 2 power number of epMaxPktSize 
  if (epMaxPktSize) {
    while (defaultEndpointSize < epMaxPktSize) {
      fifoSize++;
      defaultEndpointSize <<= 1;
    }
  }
  xfer_status[epnum].max_packet_size = epMaxPktSize;
  
  USBHS->USBHS_DEVEPT |= 1 << (USBHS_DEVEPT_EPRST0_Pos + epnum);
  USBHS->USBHS_DEVEPT &=~(1 << (USBHS_DEVEPT_EPRST0_Pos + epnum));
    
  if (epnum == 0) {
    xfer_status[EP_MAX].max_packet_size = epMaxPktSize;
    // Enable the control endpoint - Endpoint 0 
    USBHS->USBHS_DEVEPT |= USBHS_DEVEPT_EPEN0;
    // Configure the Endpoint 0 configuration register 
    USBHS->USBHS_DEVEPTCFG[0] =
      (
       USBHS_DEVEPTCFG_EPSIZE(fifoSize) |
       USBHS_DEVEPTCFG_EPTYPE(TUSB_XFER_CONTROL) |
       USBHS_DEVEPTCFG_EPBK(USBHS_DEVEPTCFG_EPBK_1_BANK) |
       USBHS_DEVEPTCFG_ALLOC
      );
    USBHS->USBHS_DEVEPTIER[0] = USBHS_DEVEPTIER_RSTDTS;
    USBHS->USBHS_DEVEPTIDR[0] = USBHS_DEVEPTIDR_STALLRQC;
    if (USBHS_DEVEPTISR_CFGOK == (USBHS->USBHS_DEVEPTISR[0] & USBHS_DEVEPTISR_CFGOK)) {
      // Endpoint configuration is successful 
      USBHS->USBHS_DEVEPTIER[0] = USBHS_DEVEPTIER_RXSTPES;
      // Enable Endpoint 0 Interrupts 
      USBHS->USBHS_DEVIER = USBHS_DEVIER_PEP_0;
      return true;
    }
    else {
      // Endpoint configuration is not successful 
      return false;
    }
  }
  else {
    // Enable the endpoint 
    USBHS->USBHS_DEVEPT |= ((0x01 << epnum) << USBHS_DEVEPT_EPEN0_Pos);
    // Set up the maxpacket size, fifo start address fifosize
    // and enable the interrupt. CLear the data toggle. 
    USBHS->USBHS_DEVEPTCFG[epnum] =
      (
       USBHS_DEVEPTCFG_EPSIZE(fifoSize) |
       USBHS_DEVEPTCFG_EPTYPE(eptype) |
       USBHS_DEVEPTCFG_EPBK(USBHS_DEVEPTCFG_EPBK_1_BANK) |
       ((dir & 0x01) << USBHS_DEVEPTCFG_EPDIR_Pos)
      );
    
    if (eptype == TUSB_XFER_ISOCHRONOUS){
      USBHS->USBHS_DEVEPTCFG[epnum] |= USBHS_DEVEPTCFG_NBTRANS(1) | USBHS_DEVEPTCFG_EPBK_2_BANK; 
    }
    USBHS->USBHS_DEVEPTCFG[epnum] |= USBHS_DEVEPTCFG_ALLOC;
    USBHS->USBHS_DEVEPTIER[epnum] = USBHS_DEVEPTIER_RSTDTS;
    USBHS->USBHS_DEVEPTIDR[epnum] = USBHS_DEVEPTIDR_STALLRQC;
    if (USBHS_DEVEPTISR_CFGOK == (USBHS->USBHS_DEVEPTISR[epnum] & USBHS_DEVEPTISR_CFGOK)) {
      // Endpoint configuration is successful. Enable Endpoint Interrupts
      if (dir == TUSB_DIR_IN) {
        USBHS->USBHS_DEVEPTICR[epnum] = USBHS_DEVEPTICR_TXINIC;
		USBHS->USBHS_DEVEPTIER[epnum] = USBHS_DEVEPTIER_TXINES;
      }
      USBHS->USBHS_DEVIER = ((0x01 << epnum) << USBHS_DEVIER_PEP_0_Pos);
      return true;
    }
    else {
      // Endpoint configuration is not successful 
      return false;
    }
  }
}

bool dcd_edpt_xfer (uint8_t rhport, uint8_t ep_addr, uint8_t * buffer, uint16_t total_bytes)
{
  (void) rhport;
  
  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir   = tu_edpt_dir(ep_addr);
  
  xfer_ctl_t * xfer = &xfer_status[epnum];
  if(ep_addr == 0x80)
    xfer = &xfer_status[EP_MAX];
  
  xfer->buffer = buffer;
  xfer->total_len = total_bytes;
  xfer->queued_len = 0;
  
  if (dir == TUSB_DIR_OUT){
    USBHS->USBHS_DEVEPTIER[epnum] = USBHS_DEVEPTIER_RXOUTES;
  }
  else {
    dcd_transmit_packet(xfer,epnum);
  }
  return true;
}

void dcd_edpt_stall (uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;
  uint8_t const epnum = tu_edpt_number(ep_addr);
  USBHS->USBHS_DEVEPTIER[epnum] = USBHS_DEVEPTIER_STALLRQS;
}

void dcd_edpt_clear_stall (uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;
  uint8_t const epnum = tu_edpt_number(ep_addr);
  USBHS->USBHS_DEVEPTIDR[epnum] = USBHS_DEVEPTIDR_STALLRQC;
  USBHS->USBHS_DEVEPTIER[epnum] = USBHS_HSTPIPIER_RSTDTS;
}
